# biocompute

./: .gitignore  LICENSE  README.md  _leakage.py  check_leakage.py  hatch_build.py  pyproject.toml
src/biocompute/: __init__.py  cache.py  cli.py  client.py  competition.py  dye.py  exceptions.py  ops.py  protocol.py  reagent.py  trace.py  visualize.py  well.py
tests/: conftest.py  test_cache.py  test_client.py  test_competition.py  test_dye.py  test_ops.py  test_well.py
